...
                    Text(text = "Num of clicks: $it")
                }
                AnimatedVisibility(visible = loginEnabled) {
                    Button(
                        onClick = { count++ },
                    ) {
                        Text(text = "LOGIN")
                    }
                }
            }
        }

    }
...
